@@ -31,7 +31,8 @@ Version 0.6 - TBD
     license and readme don't clutter up our BP folder. [OFB]
   * Re-saved grid.png with Photoshop to remove Fireworks data which was bloating it.  
     Now its about 3KB instead of 40+KB. Resolves Issue 22. [GR]
-  * print-compressed.css is now also being generated by the ruby script and is available for use.
+  * Moved compressed files to new compressed dir [OFB]
+  * print.css is now also being generated by the compressor ruby script and is available for use.
 	
 
 Version 0.5 - 28/8/2007
